// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DashboardSectionBoundary displays custom error message when section fails 1`] = `
<div>
  <div
    class="p-6 border border-red-200 rounded-lg bg-red-50"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        class="flex-shrink-0"
      >
        <svg
          class="h-6 w-6 text-red-400"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-lg font-medium text-red-800"
        >
          Test Section
        </h3>
        <div
          class="mt-2 text-sm text-red-700"
        >
          <p>
            The 
            Test Section
             is currently unavailable. Please try again later.
          </p>
        </div>
        <div
          class="mt-4"
        >
          <button
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
          >
            Refresh Dashboard
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardSectionBoundary includes section id in error boundary 1`] = `
<div>
  <div>
    Test content
  </div>
</div>
`;

exports[`DashboardSectionBoundary renders children when no error occurs 1`] = `
<div>
  <div>
    Section content
  </div>
</div>
`;

exports[`ErrorBoundary renders children when no error occurs 1`] = `
<div>
  <div>
    Normal content
  </div>
</div>
`;

exports[`ErrorBoundary renders error UI when child component throws error 1`] = `
<div>
  <div
    class="p-6 border border-red-200 rounded-lg bg-red-50"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        class="flex-shrink-0"
      >
        <svg
          class="h-6 w-6 text-red-400"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-lg font-medium text-red-800"
        >
          Something went wrong
        </h3>
        <div
          class="mt-2 text-sm text-red-700"
        >
          <p>
            We're sorry, but something unexpected happened. Please try refreshing the page.
          </p>
        </div>
        <div
          class="mt-4"
        >
          <button
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
          >
            Refresh Page
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
